@@ -1245,7 +1245,7 @@ typedef enum ADC_CH_GAIN_enum
     ADC_CH_GAIN_16X_gc = (0x04<<2),  /* 16x gain */
     ADC_CH_GAIN_32X_gc = (0x05<<2),  /* 32x gain */
     ADC_CH_GAIN_64X_gc = (0x06<<2),  /* 64x gain */
-    ADC_CH_GAIN_1/2X_gc = (0x07<<2),  /* 1/2x gain */
+    ADC_CH_GAIN_128X_gc = (0x07<<2),  /* 128x gain */
 } ADC_CH_GAIN_t;
 
 /* Conversion result resolution */
@@ -2622,6 +2622,7 @@ IO Module Instances. Mapped to memory.
 ==========================================================================
 */
 
+#define USB_EP_TABLE    (*(USB_EP_TABLE_t *) )  /* Universal Serial Bus Module */
 #define GPIO    (*(GPIO_t *) 0x0000)  /* General Purpose IO Registers */
 #define VPORT0    (*(VPORT_t *) 0x0010)  /* Virtual Port 0 */
 #define VPORT1    (*(VPORT_t *) 0x0014)  /* Virtual Port 1 */
@@ -2702,6 +2703,266 @@ IO Module Instances. Mapped to memory.
 
 
 /* ========== Flattened fully qualified IO register names ========== */
+
+/* USB_EP_TABLE - Universal Serial Bus Module */
+#define USB_EP_TABLE_EP0OUT_STATUS  _SFR_MEM8(0x0000)
+#define USB_EP_TABLE_EP0OUT_CTRL  _SFR_MEM8(0x0001)
+#define USB_EP_TABLE_EP0OUT_CNTL  _SFR_MEM8(0x0002)
+#define USB_EP_TABLE_EP0OUT_CNTH  _SFR_MEM8(0x0003)
+#define USB_EP_TABLE_EP0OUT_DATAPTRL  _SFR_MEM8(0x0004)
+#define USB_EP_TABLE_EP0OUT_DATAPTRH  _SFR_MEM8(0x0005)
+#define USB_EP_TABLE_EP0OUT_AUXDATAL  _SFR_MEM8(0x0006)
+#define USB_EP_TABLE_EP0OUT_AUXDATAH  _SFR_MEM8(0x0007)
+#define USB_EP_TABLE_EP0IN_STATUS  _SFR_MEM8(0x0008)
+#define USB_EP_TABLE_EP0IN_CTRL  _SFR_MEM8(0x0009)
+#define USB_EP_TABLE_EP0IN_CNTL  _SFR_MEM8(0x000A)
+#define USB_EP_TABLE_EP0IN_CNTH  _SFR_MEM8(0x000B)
+#define USB_EP_TABLE_EP0IN_DATAPTRL  _SFR_MEM8(0x000C)
+#define USB_EP_TABLE_EP0IN_DATAPTRH  _SFR_MEM8(0x000D)
+#define USB_EP_TABLE_EP0IN_AUXDATAL  _SFR_MEM8(0x000E)
+#define USB_EP_TABLE_EP0IN_AUXDATAH  _SFR_MEM8(0x000F)
+#define USB_EP_TABLE_EP1OUT_STATUS  _SFR_MEM8(0x0010)
+#define USB_EP_TABLE_EP1OUT_CTRL  _SFR_MEM8(0x0011)
+#define USB_EP_TABLE_EP1OUT_CNTL  _SFR_MEM8(0x0012)
+#define USB_EP_TABLE_EP1OUT_CNTH  _SFR_MEM8(0x0013)
+#define USB_EP_TABLE_EP1OUT_DATAPTRL  _SFR_MEM8(0x0014)
+#define USB_EP_TABLE_EP1OUT_DATAPTRH  _SFR_MEM8(0x0015)
+#define USB_EP_TABLE_EP1OUT_AUXDATAL  _SFR_MEM8(0x0016)
+#define USB_EP_TABLE_EP1OUT_AUXDATAH  _SFR_MEM8(0x0017)
+#define USB_EP_TABLE_EP1IN_STATUS  _SFR_MEM8(0x0018)
+#define USB_EP_TABLE_EP1IN_CTRL  _SFR_MEM8(0x0019)
+#define USB_EP_TABLE_EP1IN_CNTL  _SFR_MEM8(0x001A)
+#define USB_EP_TABLE_EP1IN_CNTH  _SFR_MEM8(0x001B)
+#define USB_EP_TABLE_EP1IN_DATAPTRL  _SFR_MEM8(0x001C)
+#define USB_EP_TABLE_EP1IN_DATAPTRH  _SFR_MEM8(0x001D)
+#define USB_EP_TABLE_EP1IN_AUXDATAL  _SFR_MEM8(0x001E)
+#define USB_EP_TABLE_EP1IN_AUXDATAH  _SFR_MEM8(0x001F)
+#define USB_EP_TABLE_EP2OUT_STATUS  _SFR_MEM8(0x0020)
+#define USB_EP_TABLE_EP2OUT_CTRL  _SFR_MEM8(0x0021)
+#define USB_EP_TABLE_EP2OUT_CNTL  _SFR_MEM8(0x0022)
+#define USB_EP_TABLE_EP2OUT_CNTH  _SFR_MEM8(0x0023)
+#define USB_EP_TABLE_EP2OUT_DATAPTRL  _SFR_MEM8(0x0024)
+#define USB_EP_TABLE_EP2OUT_DATAPTRH  _SFR_MEM8(0x0025)
+#define USB_EP_TABLE_EP2OUT_AUXDATAL  _SFR_MEM8(0x0026)
+#define USB_EP_TABLE_EP2OUT_AUXDATAH  _SFR_MEM8(0x0027)
+#define USB_EP_TABLE_EP2IN_STATUS  _SFR_MEM8(0x0028)
+#define USB_EP_TABLE_EP2IN_CTRL  _SFR_MEM8(0x0029)
+#define USB_EP_TABLE_EP2IN_CNTL  _SFR_MEM8(0x002A)
+#define USB_EP_TABLE_EP2IN_CNTH  _SFR_MEM8(0x002B)
+#define USB_EP_TABLE_EP2IN_DATAPTRL  _SFR_MEM8(0x002C)
+#define USB_EP_TABLE_EP2IN_DATAPTRH  _SFR_MEM8(0x002D)
+#define USB_EP_TABLE_EP2IN_AUXDATAL  _SFR_MEM8(0x002E)
+#define USB_EP_TABLE_EP2IN_AUXDATAH  _SFR_MEM8(0x002F)
+#define USB_EP_TABLE_EP3OUT_STATUS  _SFR_MEM8(0x0030)
+#define USB_EP_TABLE_EP3OUT_CTRL  _SFR_MEM8(0x0031)
+#define USB_EP_TABLE_EP3OUT_CNTL  _SFR_MEM8(0x0032)
+#define USB_EP_TABLE_EP3OUT_CNTH  _SFR_MEM8(0x0033)
+#define USB_EP_TABLE_EP3OUT_DATAPTRL  _SFR_MEM8(0x0034)
+#define USB_EP_TABLE_EP3OUT_DATAPTRH  _SFR_MEM8(0x0035)
+#define USB_EP_TABLE_EP3OUT_AUXDATAL  _SFR_MEM8(0x0036)
+#define USB_EP_TABLE_EP3OUT_AUXDATAH  _SFR_MEM8(0x0037)
+#define USB_EP_TABLE_EP3IN_STATUS  _SFR_MEM8(0x0038)
+#define USB_EP_TABLE_EP3IN_CTRL  _SFR_MEM8(0x0039)
+#define USB_EP_TABLE_EP3IN_CNTL  _SFR_MEM8(0x003A)
+#define USB_EP_TABLE_EP3IN_CNTH  _SFR_MEM8(0x003B)
+#define USB_EP_TABLE_EP3IN_DATAPTRL  _SFR_MEM8(0x003C)
+#define USB_EP_TABLE_EP3IN_DATAPTRH  _SFR_MEM8(0x003D)
+#define USB_EP_TABLE_EP3IN_AUXDATAL  _SFR_MEM8(0x003E)
+#define USB_EP_TABLE_EP3IN_AUXDATAH  _SFR_MEM8(0x003F)
+#define USB_EP_TABLE_EP4OUT_STATUS  _SFR_MEM8(0x0040)
+#define USB_EP_TABLE_EP4OUT_CTRL  _SFR_MEM8(0x0041)
+#define USB_EP_TABLE_EP4OUT_CNTL  _SFR_MEM8(0x0042)
+#define USB_EP_TABLE_EP4OUT_CNTH  _SFR_MEM8(0x0043)
+#define USB_EP_TABLE_EP4OUT_DATAPTRL  _SFR_MEM8(0x0044)
+#define USB_EP_TABLE_EP4OUT_DATAPTRH  _SFR_MEM8(0x0045)
+#define USB_EP_TABLE_EP4OUT_AUXDATAL  _SFR_MEM8(0x0046)
+#define USB_EP_TABLE_EP4OUT_AUXDATAH  _SFR_MEM8(0x0047)
+#define USB_EP_TABLE_EP4IN_STATUS  _SFR_MEM8(0x0048)
+#define USB_EP_TABLE_EP4IN_CTRL  _SFR_MEM8(0x0049)
+#define USB_EP_TABLE_EP4IN_CNTL  _SFR_MEM8(0x004A)
+#define USB_EP_TABLE_EP4IN_CNTH  _SFR_MEM8(0x004B)
+#define USB_EP_TABLE_EP4IN_DATAPTRL  _SFR_MEM8(0x004C)
+#define USB_EP_TABLE_EP4IN_DATAPTRH  _SFR_MEM8(0x004D)
+#define USB_EP_TABLE_EP4IN_AUXDATAL  _SFR_MEM8(0x004E)
+#define USB_EP_TABLE_EP4IN_AUXDATAH  _SFR_MEM8(0x004F)
+#define USB_EP_TABLE_EP5OUT_STATUS  _SFR_MEM8(0x0050)
+#define USB_EP_TABLE_EP5OUT_CTRL  _SFR_MEM8(0x0051)
+#define USB_EP_TABLE_EP5OUT_CNTL  _SFR_MEM8(0x0052)
+#define USB_EP_TABLE_EP5OUT_CNTH  _SFR_MEM8(0x0053)
+#define USB_EP_TABLE_EP5OUT_DATAPTRL  _SFR_MEM8(0x0054)
+#define USB_EP_TABLE_EP5OUT_DATAPTRH  _SFR_MEM8(0x0055)
+#define USB_EP_TABLE_EP5OUT_AUXDATAL  _SFR_MEM8(0x0056)
+#define USB_EP_TABLE_EP5OUT_AUXDATAH  _SFR_MEM8(0x0057)
+#define USB_EP_TABLE_EP5IN_STATUS  _SFR_MEM8(0x0058)
+#define USB_EP_TABLE_EP5IN_CTRL  _SFR_MEM8(0x0059)
+#define USB_EP_TABLE_EP5IN_CNTL  _SFR_MEM8(0x005A)
+#define USB_EP_TABLE_EP5IN_CNTH  _SFR_MEM8(0x005B)
+#define USB_EP_TABLE_EP5IN_DATAPTRL  _SFR_MEM8(0x005C)
+#define USB_EP_TABLE_EP5IN_DATAPTRH  _SFR_MEM8(0x005D)
+#define USB_EP_TABLE_EP5IN_AUXDATAL  _SFR_MEM8(0x005E)
+#define USB_EP_TABLE_EP5IN_AUXDATAH  _SFR_MEM8(0x005F)
+#define USB_EP_TABLE_EP6OUT_STATUS  _SFR_MEM8(0x0060)
+#define USB_EP_TABLE_EP6OUT_CTRL  _SFR_MEM8(0x0061)
+#define USB_EP_TABLE_EP6OUT_CNTL  _SFR_MEM8(0x0062)
+#define USB_EP_TABLE_EP6OUT_CNTH  _SFR_MEM8(0x0063)
+#define USB_EP_TABLE_EP6OUT_DATAPTRL  _SFR_MEM8(0x0064)
+#define USB_EP_TABLE_EP6OUT_DATAPTRH  _SFR_MEM8(0x0065)
+#define USB_EP_TABLE_EP6OUT_AUXDATAL  _SFR_MEM8(0x0066)
+#define USB_EP_TABLE_EP6OUT_AUXDATAH  _SFR_MEM8(0x0067)
+#define USB_EP_TABLE_EP6IN_STATUS  _SFR_MEM8(0x0068)
+#define USB_EP_TABLE_EP6IN_CTRL  _SFR_MEM8(0x0069)
+#define USB_EP_TABLE_EP6IN_CNTL  _SFR_MEM8(0x006A)
+#define USB_EP_TABLE_EP6IN_CNTH  _SFR_MEM8(0x006B)
+#define USB_EP_TABLE_EP6IN_DATAPTRL  _SFR_MEM8(0x006C)
+#define USB_EP_TABLE_EP6IN_DATAPTRH  _SFR_MEM8(0x006D)
+#define USB_EP_TABLE_EP6IN_AUXDATAL  _SFR_MEM8(0x006E)
+#define USB_EP_TABLE_EP6IN_AUXDATAH  _SFR_MEM8(0x006F)
+#define USB_EP_TABLE_EP7OUT_STATUS  _SFR_MEM8(0x0070)
+#define USB_EP_TABLE_EP7OUT_CTRL  _SFR_MEM8(0x0071)
+#define USB_EP_TABLE_EP7OUT_CNTL  _SFR_MEM8(0x0072)
+#define USB_EP_TABLE_EP7OUT_CNTH  _SFR_MEM8(0x0073)
+#define USB_EP_TABLE_EP7OUT_DATAPTRL  _SFR_MEM8(0x0074)
+#define USB_EP_TABLE_EP7OUT_DATAPTRH  _SFR_MEM8(0x0075)
+#define USB_EP_TABLE_EP7OUT_AUXDATAL  _SFR_MEM8(0x0076)
+#define USB_EP_TABLE_EP7OUT_AUXDATAH  _SFR_MEM8(0x0077)
+#define USB_EP_TABLE_EP7IN_STATUS  _SFR_MEM8(0x0078)
+#define USB_EP_TABLE_EP7IN_CTRL  _SFR_MEM8(0x0079)
+#define USB_EP_TABLE_EP7IN_CNTL  _SFR_MEM8(0x007A)
+#define USB_EP_TABLE_EP7IN_CNTH  _SFR_MEM8(0x007B)
+#define USB_EP_TABLE_EP7IN_DATAPTRL  _SFR_MEM8(0x007C)
+#define USB_EP_TABLE_EP7IN_DATAPTRH  _SFR_MEM8(0x007D)
+#define USB_EP_TABLE_EP7IN_AUXDATAL  _SFR_MEM8(0x007E)
+#define USB_EP_TABLE_EP7IN_AUXDATAH  _SFR_MEM8(0x007F)
+#define USB_EP_TABLE_EP8OUT_STATUS  _SFR_MEM8(0x0080)
+#define USB_EP_TABLE_EP8OUT_CTRL  _SFR_MEM8(0x0081)
+#define USB_EP_TABLE_EP8OUT_CNTL  _SFR_MEM8(0x0082)
+#define USB_EP_TABLE_EP8OUT_CNTH  _SFR_MEM8(0x0083)
+#define USB_EP_TABLE_EP8OUT_DATAPTRL  _SFR_MEM8(0x0084)
+#define USB_EP_TABLE_EP8OUT_DATAPTRH  _SFR_MEM8(0x0085)
+#define USB_EP_TABLE_EP8OUT_AUXDATAL  _SFR_MEM8(0x0086)
+#define USB_EP_TABLE_EP8OUT_AUXDATAH  _SFR_MEM8(0x0087)
+#define USB_EP_TABLE_EP8IN_STATUS  _SFR_MEM8(0x0088)
+#define USB_EP_TABLE_EP8IN_CTRL  _SFR_MEM8(0x0089)
+#define USB_EP_TABLE_EP8IN_CNTL  _SFR_MEM8(0x008A)
+#define USB_EP_TABLE_EP8IN_CNTH  _SFR_MEM8(0x008B)
+#define USB_EP_TABLE_EP8IN_DATAPTRL  _SFR_MEM8(0x008C)
+#define USB_EP_TABLE_EP8IN_DATAPTRH  _SFR_MEM8(0x008D)
+#define USB_EP_TABLE_EP8IN_AUXDATAL  _SFR_MEM8(0x008E)
+#define USB_EP_TABLE_EP8IN_AUXDATAH  _SFR_MEM8(0x008F)
+#define USB_EP_TABLE_EP9OUT_STATUS  _SFR_MEM8(0x0090)
+#define USB_EP_TABLE_EP9OUT_CTRL  _SFR_MEM8(0x0091)
+#define USB_EP_TABLE_EP9OUT_CNTL  _SFR_MEM8(0x0092)
+#define USB_EP_TABLE_EP9OUT_CNTH  _SFR_MEM8(0x0093)
+#define USB_EP_TABLE_EP9OUT_DATAPTRL  _SFR_MEM8(0x0094)
+#define USB_EP_TABLE_EP9OUT_DATAPTRH  _SFR_MEM8(0x0095)
+#define USB_EP_TABLE_EP9OUT_AUXDATAL  _SFR_MEM8(0x0096)
+#define USB_EP_TABLE_EP9OUT_AUXDATAH  _SFR_MEM8(0x0097)
+#define USB_EP_TABLE_EP9IN_STATUS  _SFR_MEM8(0x0098)
+#define USB_EP_TABLE_EP9IN_CTRL  _SFR_MEM8(0x0099)
+#define USB_EP_TABLE_EP9IN_CNTL  _SFR_MEM8(0x009A)
+#define USB_EP_TABLE_EP9IN_CNTH  _SFR_MEM8(0x009B)
+#define USB_EP_TABLE_EP9IN_DATAPTRL  _SFR_MEM8(0x009C)
+#define USB_EP_TABLE_EP9IN_DATAPTRH  _SFR_MEM8(0x009D)
+#define USB_EP_TABLE_EP9IN_AUXDATAL  _SFR_MEM8(0x009E)
+#define USB_EP_TABLE_EP9IN_AUXDATAH  _SFR_MEM8(0x009F)
+#define USB_EP_TABLE_EP10OUT_STATUS  _SFR_MEM8(0x00A0)
+#define USB_EP_TABLE_EP10OUT_CTRL  _SFR_MEM8(0x00A1)
+#define USB_EP_TABLE_EP10OUT_CNTL  _SFR_MEM8(0x00A2)
+#define USB_EP_TABLE_EP10OUT_CNTH  _SFR_MEM8(0x00A3)
+#define USB_EP_TABLE_EP10OUT_DATAPTRL  _SFR_MEM8(0x00A4)
+#define USB_EP_TABLE_EP10OUT_DATAPTRH  _SFR_MEM8(0x00A5)
+#define USB_EP_TABLE_EP10OUT_AUXDATAL  _SFR_MEM8(0x00A6)
+#define USB_EP_TABLE_EP10OUT_AUXDATAH  _SFR_MEM8(0x00A7)
+#define USB_EP_TABLE_EP10IN_STATUS  _SFR_MEM8(0x00A8)
+#define USB_EP_TABLE_EP10IN_CTRL  _SFR_MEM8(0x00A9)
+#define USB_EP_TABLE_EP10IN_CNTL  _SFR_MEM8(0x00AA)
+#define USB_EP_TABLE_EP10IN_CNTH  _SFR_MEM8(0x00AB)
+#define USB_EP_TABLE_EP10IN_DATAPTRL  _SFR_MEM8(0x00AC)
+#define USB_EP_TABLE_EP10IN_DATAPTRH  _SFR_MEM8(0x00AD)
+#define USB_EP_TABLE_EP10IN_AUXDATAL  _SFR_MEM8(0x00AE)
+#define USB_EP_TABLE_EP10IN_AUXDATAH  _SFR_MEM8(0x00AF)
+#define USB_EP_TABLE_EP11OUT_STATUS  _SFR_MEM8(0x00B0)
+#define USB_EP_TABLE_EP11OUT_CTRL  _SFR_MEM8(0x00B1)
+#define USB_EP_TABLE_EP11OUT_CNTL  _SFR_MEM8(0x00B2)
+#define USB_EP_TABLE_EP11OUT_CNTH  _SFR_MEM8(0x00B3)
+#define USB_EP_TABLE_EP11OUT_DATAPTRL  _SFR_MEM8(0x00B4)
+#define USB_EP_TABLE_EP11OUT_DATAPTRH  _SFR_MEM8(0x00B5)
+#define USB_EP_TABLE_EP11OUT_AUXDATAL  _SFR_MEM8(0x00B6)
+#define USB_EP_TABLE_EP11OUT_AUXDATAH  _SFR_MEM8(0x00B7)
+#define USB_EP_TABLE_EP11IN_STATUS  _SFR_MEM8(0x00B8)
+#define USB_EP_TABLE_EP11IN_CTRL  _SFR_MEM8(0x00B9)
+#define USB_EP_TABLE_EP11IN_CNTL  _SFR_MEM8(0x00BA)
+#define USB_EP_TABLE_EP11IN_CNTH  _SFR_MEM8(0x00BB)
+#define USB_EP_TABLE_EP11IN_DATAPTRL  _SFR_MEM8(0x00BC)
+#define USB_EP_TABLE_EP11IN_DATAPTRH  _SFR_MEM8(0x00BD)
+#define USB_EP_TABLE_EP11IN_AUXDATAL  _SFR_MEM8(0x00BE)
+#define USB_EP_TABLE_EP11IN_AUXDATAH  _SFR_MEM8(0x00BF)
+#define USB_EP_TABLE_EP12OUT_STATUS  _SFR_MEM8(0x00C0)
+#define USB_EP_TABLE_EP12OUT_CTRL  _SFR_MEM8(0x00C1)
+#define USB_EP_TABLE_EP12OUT_CNTL  _SFR_MEM8(0x00C2)
+#define USB_EP_TABLE_EP12OUT_CNTH  _SFR_MEM8(0x00C3)
+#define USB_EP_TABLE_EP12OUT_DATAPTRL  _SFR_MEM8(0x00C4)
+#define USB_EP_TABLE_EP12OUT_DATAPTRH  _SFR_MEM8(0x00C5)
+#define USB_EP_TABLE_EP12OUT_AUXDATAL  _SFR_MEM8(0x00C6)
+#define USB_EP_TABLE_EP12OUT_AUXDATAH  _SFR_MEM8(0x00C7)
+#define USB_EP_TABLE_EP12IN_STATUS  _SFR_MEM8(0x00C8)
+#define USB_EP_TABLE_EP12IN_CTRL  _SFR_MEM8(0x00C9)
+#define USB_EP_TABLE_EP12IN_CNTL  _SFR_MEM8(0x00CA)
+#define USB_EP_TABLE_EP12IN_CNTH  _SFR_MEM8(0x00CB)
+#define USB_EP_TABLE_EP12IN_DATAPTRL  _SFR_MEM8(0x00CC)
+#define USB_EP_TABLE_EP12IN_DATAPTRH  _SFR_MEM8(0x00CD)
+#define USB_EP_TABLE_EP12IN_AUXDATAL  _SFR_MEM8(0x00CE)
+#define USB_EP_TABLE_EP12IN_AUXDATAH  _SFR_MEM8(0x00CF)
+#define USB_EP_TABLE_EP13OUT_STATUS  _SFR_MEM8(0x00D0)
+#define USB_EP_TABLE_EP13OUT_CTRL  _SFR_MEM8(0x00D1)
+#define USB_EP_TABLE_EP13OUT_CNTL  _SFR_MEM8(0x00D2)
+#define USB_EP_TABLE_EP13OUT_CNTH  _SFR_MEM8(0x00D3)
+#define USB_EP_TABLE_EP13OUT_DATAPTRL  _SFR_MEM8(0x00D4)
+#define USB_EP_TABLE_EP13OUT_DATAPTRH  _SFR_MEM8(0x00D5)
+#define USB_EP_TABLE_EP13OUT_AUXDATAL  _SFR_MEM8(0x00D6)
+#define USB_EP_TABLE_EP13OUT_AUXDATAH  _SFR_MEM8(0x00D7)
+#define USB_EP_TABLE_EP13IN_STATUS  _SFR_MEM8(0x00D8)
+#define USB_EP_TABLE_EP13IN_CTRL  _SFR_MEM8(0x00D9)
+#define USB_EP_TABLE_EP13IN_CNTL  _SFR_MEM8(0x00DA)
+#define USB_EP_TABLE_EP13IN_CNTH  _SFR_MEM8(0x00DB)
+#define USB_EP_TABLE_EP13IN_DATAPTRL  _SFR_MEM8(0x00DC)
+#define USB_EP_TABLE_EP13IN_DATAPTRH  _SFR_MEM8(0x00DD)
+#define USB_EP_TABLE_EP13IN_AUXDATAL  _SFR_MEM8(0x00DE)
+#define USB_EP_TABLE_EP13IN_AUXDATAH  _SFR_MEM8(0x00DF)
+#define USB_EP_TABLE_EP14OUT_STATUS  _SFR_MEM8(0x00E0)
+#define USB_EP_TABLE_EP14OUT_CTRL  _SFR_MEM8(0x00E1)
+#define USB_EP_TABLE_EP14OUT_CNTL  _SFR_MEM8(0x00E2)
+#define USB_EP_TABLE_EP14OUT_CNTH  _SFR_MEM8(0x00E3)
+#define USB_EP_TABLE_EP14OUT_DATAPTRL  _SFR_MEM8(0x00E4)
+#define USB_EP_TABLE_EP14OUT_DATAPTRH  _SFR_MEM8(0x00E5)
+#define USB_EP_TABLE_EP14OUT_AUXDATAL  _SFR_MEM8(0x00E6)
+#define USB_EP_TABLE_EP14OUT_AUXDATAH  _SFR_MEM8(0x00E7)
+#define USB_EP_TABLE_EP14IN_STATUS  _SFR_MEM8(0x00E8)
+#define USB_EP_TABLE_EP14IN_CTRL  _SFR_MEM8(0x00E9)
+#define USB_EP_TABLE_EP14IN_CNTL  _SFR_MEM8(0x00EA)
+#define USB_EP_TABLE_EP14IN_CNTH  _SFR_MEM8(0x00EB)
+#define USB_EP_TABLE_EP14IN_DATAPTRL  _SFR_MEM8(0x00EC)
+#define USB_EP_TABLE_EP14IN_DATAPTRH  _SFR_MEM8(0x00ED)
+#define USB_EP_TABLE_EP14IN_AUXDATAL  _SFR_MEM8(0x00EE)
+#define USB_EP_TABLE_EP14IN_AUXDATAH  _SFR_MEM8(0x00EF)
+#define USB_EP_TABLE_EP15OUT_STATUS  _SFR_MEM8(0x00F0)
+#define USB_EP_TABLE_EP15OUT_CTRL  _SFR_MEM8(0x00F1)
+#define USB_EP_TABLE_EP15OUT_CNTL  _SFR_MEM8(0x00F2)
+#define USB_EP_TABLE_EP15OUT_CNTH  _SFR_MEM8(0x00F3)
+#define USB_EP_TABLE_EP15OUT_DATAPTRL  _SFR_MEM8(0x00F4)
+#define USB_EP_TABLE_EP15OUT_DATAPTRH  _SFR_MEM8(0x00F5)
+#define USB_EP_TABLE_EP15OUT_AUXDATAL  _SFR_MEM8(0x00F6)
+#define USB_EP_TABLE_EP15OUT_AUXDATAH  _SFR_MEM8(0x00F7)
+#define USB_EP_TABLE_EP15IN_STATUS  _SFR_MEM8(0x00F8)
+#define USB_EP_TABLE_EP15IN_CTRL  _SFR_MEM8(0x00F9)
+#define USB_EP_TABLE_EP15IN_CNTL  _SFR_MEM8(0x00FA)
+#define USB_EP_TABLE_EP15IN_CNTH  _SFR_MEM8(0x00FB)
+#define USB_EP_TABLE_EP15IN_DATAPTRL  _SFR_MEM8(0x00FC)
+#define USB_EP_TABLE_EP15IN_DATAPTRH  _SFR_MEM8(0x00FD)
+#define USB_EP_TABLE_EP15IN_AUXDATAL  _SFR_MEM8(0x00FE)
+#define USB_EP_TABLE_EP15IN_AUXDATAH  _SFR_MEM8(0x00FF)
+#define USB_EP_TABLE_FRAMENUML  _SFR_MEM8(0x0110)
+#define USB_EP_TABLE_FRAMENUMH  _SFR_MEM8(0x0111)
 
 /* GPIO - General Purpose IO Registers */
 #define GPIO_GPIOR0  _SFR_MEM8(0x0000)
